<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="0dp"
                android:contentDescription="@string/user_item_img_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/tvUserItemPhoneNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvUserItemName"
                app:srcCompat="@drawable/no_image" />

            <TextView
                android:id="@+id/userItemId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text_id"
                android:textAppearance="?attr/textAppearanceBodySmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/default_text_name"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserItemSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/default_text_surname"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintStart_toEndOf="@+id/tvUserItemName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUserItemPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_text_phone_number"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvUserItemName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>